# Hikka

./: .deepsource.toml  .dockerignore  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile_Okteto  Heroku  LICENSE  MineEVO  Okteto  Pipfile  Procfile  README.md  README_ru.md  _start_sandbox.sh  app.json  banner.sh  diff.txt  docker-compose.yml  docker.sh  heroku.yml  install-heroku.ps1  install.sh  isolate_aarch64  isolate_armv7l  isolate_x86-64  okteto-pipeline.yml  okteto-stack.yaml  okteto.yml  optional_requirements.txt  pyproject.toml  requirements.txt  run  runtime.txt  start.sh  termux.sh  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  hikka-bug-report.md  hikka-improvement-request.md  module-request.md  modules-bug-report.md
.github/workflows/: docker-image.yml  forbid_prs.yml
assets/: 2fa.txt  banner.txt  download.txt  noface.json  success.txt
data/: README.md
docs/: inline.md  mods.md
hikka/: __init__.py  __main__.py  _internal.py  _local_storage.py  _reference_finder.py  _types.py  configurator.py  database.py  dispatcher.py  entity_cache.py  fast_uploader.py  forbid_joins.py  heroku.py  hikka_backup.py  inline.py  loader.py  log.py  main.py  pointers.py  qr.py  security.py  tl_cache.py  translations.py  types.py  utils.py  validators.py  version.py
hikka/compat/: __init__.py  dbhelper.py  dragon.py  geek.py  pyroproxy.py  raphielgang.py  uniborg.py  util.py
hikka/database/: backend.py  frontend.py
hikka/inline/: core.py  (+10 more)
private/: listener.py
web-resources/: base.jinja2  initial_root.jinja2  root.jinja2
(+80 files in other folders)
